--- a/Explosion.html
+++ b/Explosion.html
@@ -209,7 +209,8 @@
 
 
     <br><br>
-    <center><img src='Girl.jpg' class="img-thumbnail" style='height:300px;width:250px;;top:290px'></center>
+   
+    <center><img src='Girl.jpg' class="img-thumbnail" style='height:400px;width:250px;;top:290px ;'></center>
     <div class="heart love1"></div>
     <div class="heart love2"></div>
     <div class="box-bottom">
