--- a/index.html
+++ b/index.html
@@ -64,43 +64,43 @@
                     Cómo podría sonreír, cómo podría ser feliz, si algún día me enterase, de que no estás enamorada de mí.
                     <hr>
                     <br>
-                    <h4 class="modal-title">Poema 1 </h4><br><audio src="Poemas/y2mate.com_POEMA_2_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 1 </h4><br><audio src="y2mate.com_POEMA_2_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 2 </h4><br><audio src="Poemas/y2mate.com_POEMA_3 _Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 2 </h4><br><audio src="y2mate.com_POEMA_3 _Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 3 </h4><br><audio src="Poemas/y2mate.com_POEMA_4_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 3 </h4><br><audio src="y2mate.com_POEMA_4_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 4 </h4><br><audio src="Poemas/y2mate.com_POEMA_5_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 4 </h4><br><audio src="y2mate.com_POEMA_5_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 5 </h4><br><audio src="Poemas/y2mate.com_POEMA_6_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 5 </h4><br><audio src="y2mate.com_POEMA_6_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 6 </h4><br><audio src="Poemas/y2mate.com_POEMA_7_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 6 </h4><br><audio src="y2mate.com_POEMA_7_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 7 </h4><br><audio src="Poemas/y2mate.com_POEMA_8_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 7 </h4><br><audio src="y2mate.com_POEMA_8_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 8 </h4><br><audio src="Poemas/y2mate.com_POEMA_9_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 8 </h4><br><audio src="y2mate.com_POEMA_9_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 9 </h4><br><audio src="Poemas/y2mate.com_POEMA_10_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 9 </h4><br><audio src="y2mate.com_POEMA_10_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 10 </h4><br><audio src="Poemas/y2mate.com_POEMA_11_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 10 </h4><br><audio src="y2mate.com_POEMA_11_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 11 </h4><br><audio src="Poemas/y2mate.com_POEMA_12_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 11 </h4><br><audio src="y2mate.com_POEMA_12_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 12 </h4><br><audio src="Poemas/y2mate.com_POEMA_13_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 12 </h4><br><audio src="y2mate.com_POEMA_13_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 13 </h4><br><audio src="Poemas/y2mate.com_POEMA_14_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 13 </h4><br><audio src="y2mate.com_POEMA_14_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 14 </h4><br><audio src="Poemas/y2mate.com_POEMA_15_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 14 </h4><br><audio src="y2mate.com_POEMA_15_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 15 </h4><br><audio src="Poemas/y2mate.com_POEMA_16_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 15 </h4><br><audio src="y2mate.com_POEMA_16_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 16 </h4><br><audio src="Poemas/y2mate.com_POEMA_17_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 16 </h4><br><audio src="y2mate.com_POEMA_17_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 17 </h4><br><audio src="Poemas/y2mate.com_POEMA_18_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 17 </h4><br><audio src="y2mate.com_POEMA_18_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 18 </h4><br><audio src="Poemas/y2mate.com_POEMA_19_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 18 </h4><br><audio src="y2mate.com_POEMA_19_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
-                    <h4 class="modal-title">Poema 19 </h4><br><audio src="Poemas/y2mate.com_POEMA_20_Pablo_Neruda.mp3" controls></audio>
+                    <h4 class="modal-title">Poema 19 </h4><br><audio src="y2mate.com_POEMA_20_Pablo_Neruda.mp3" controls></audio>
                     <hr><br>
                     
                 </div>
