--- a/Explosion.html
+++ b/Explosion.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="Babel.js" type="text/javascript"></script>
+    <link href="cssBoostrap.css" rel="stylesheet" type="text/css"/>
     <title>MeEncantas</title>
     <style>
         body {
@@ -207,9 +207,7 @@
 
 <body>
 
-
     <br><br>
-   
     <center><img src='Girl.jpg' class="img-thumbnail" style='height:400px;width:250px;;top:290px ;'></center>
     <div class="heart love1"></div>
     <div class="heart love2"></div>
