--- a/index.html
+++ b/index.html
@@ -2,15 +2,47 @@
 <HTML>
   <head>
     <title>Gracias por todo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link href="cssBoostrap.css" rel="stylesheet" type="text/css"/>
+    <script src="Babel.js" type="text/javascript"></script>
 </head>
   <body>
-    <div id="una capa">
       <center>
-    <h1>Hola Bienvenida</h1>
-      <a href="FeliCumpleanios.html"><button type="button" class="btn btn-danger">Feliz Cumpleaños</button></a>
-      <a href="aniversario.html"><button type="button" class="btn btn-danger">Aniversario</button></a> </center>
-    </div>
+    <div>
+        
+           <h1>Hola Bienvenida</h1>
+  
+     <div class="col-sm-6 mb-3 mb-sm-0">
+            <div class="card">
+                   <button type="button" class="btn btn-outline-danger">
+                   <a class="nav-link" href="FeliCumpleanios.html">
+                   <h3 class="card-title">Cumpleaños</h3>
+                   </a>
+                   </button>
+
+                </div>
+            </div>
+           <div class="col-sm-6 mb-3 mb-sm-0">
+            <div class="card">
+                   <button type="button" class="btn btn-outline-danger">
+                   <a class="nav-link" href="Aniversario.html">
+                   <h3 class="card-title">Aniversario</h3>
+                   </a>
+                   </button>
+
+                </div>
+            </div>
+           <div class="col-sm-6 mb-3 mb-sm-0">
+            <div class="card">
+                   <button type="button" class="btn btn-outline-danger">
+                   <a class="nav-link" href="Febrero14.html">
+                   <h3 class="card-title">Productos</h3>
+                   </a>
+                   </button>
+
+                </div>
+            </div>
+        </div>  
+        </center>
+   
   </body>  
 </HTML>
