--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
            <div class="col-sm-6 mb-3 mb-sm-0">
             <div class="card">
                    <button type="button" class="btn btn-outline-danger">
-                   <a class="nav-link" href="Aniversario.html">
+                   <a class="nav-link" href="aniversario.html">
                    <h3 class="card-title">Aniversario</h3>
                    </a>
                    </button>
