--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
            <h1>Hola Bienvenida</h1>
   
-     <div class="col-sm-6 mb-3 mb-sm-0">
+           <div class="container text-center col-lg-auto col-md-auto mx-auto">
             <div class="card">
                    <button type="button" class="btn btn-outline-danger">
                    <a class="nav-link" href="FeliCumpleanios.html">
@@ -21,7 +21,7 @@
 
                 </div>
             </div>
-           <div class="col-sm-6 mb-3 mb-sm-0">
+           <div class="container text-center col-lg-auto col-md-auto mx-auto">
             <div class="card">
                    <button type="button" class="btn btn-outline-danger">
                    <a class="nav-link" href="aniversario.html">
@@ -31,11 +31,11 @@
 
                 </div>
             </div>
-           <div class="col-sm-6 mb-3 mb-sm-0">
+            <div class="container text-center col-lg-auto col-md-auto mx-auto">
             <div class="card">
                    <button type="button" class="btn btn-outline-danger">
                    <a class="nav-link" href="Febrero14.html">
-                   <h3 class="card-title">Productos</h3>
+                   <h3 class="card-title"> 14 febrero</h3>
                    </a>
                    </button>
 
