--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <body>
       
       <center>
-    <div >
+          <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded container">
+          <div class="container text-center col-lg-auto col-md-auto mx-auto"> 
            <h1>Hola Bienvenida</h1>
            <div class="container text-center col-lg-auto col-md-auto mx-auto">
             <div class="card">
@@ -39,7 +40,9 @@
                    </button>
                 </div>
             </div>
-        </div>  
+        </div>      
+          </div>
+    
         </center>
    
   </body>  
