--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <script src="Babel.js" type="text/javascript"></script>
 </head>
   <body>
-      
       <center>
           <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded container">
-          <div class="container text-center col-lg-auto col-md-auto mx-auto"> 
+          <div class="container text-center col-lg-auto col-md-auto mx-12"> 
            <h1>Hola Bienvenida</h1>
-           <div class="container text-center col-lg-auto col-md-auto mx-auto">
+           <div class="container text-center col-lg-auto col-md-auto mx-12">
             <div class="card">
                    <button type="button" class="btn btn-outline-danger">
                    <a class="nav-link" href="FeliCumpleanios.html">
@@ -21,7 +20,7 @@
 
                 </div>
             </div>
-           <div class="container text-center col-lg-auto col-md-auto mx-auto">
+           <div class="container text-center col-lg-auto col-md-auto mx-12">
             <div class="card">
                    <button type="button" class="btn btn-outline-danger">
                    <a class="nav-link" href="aniversario.html">
@@ -31,7 +30,7 @@
 
                 </div>
             </div>
-            <div class="container text-center col-lg-auto col-md-auto mx-auto">
+            <div class="container text-center col-lg-auto col-md-auto mx-12">
             <div class="card">
                    <button type="button" class="btn btn-outline-danger">
                    <a class="nav-link" href="Febrero14.html">
